--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="header">
     <nav class="navbar">
       <div class="brand">
-        <img src="assets/img/logo.png" alt="Jurix & Sistem logo" />
+        <img src="assets/img/Logo.png" alt="Jurix & Sistem Logo" />
         <h1>JURIX & SISTEM S.A.S.</h1>
       </div>
       <div class="nav-links">
