--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="header">
     <nav class="navbar">
       <div class="brand">
-        <img class="logo" src="assets/img/logo.png" alt="Jurix & Sistem logo">
+        <img class="logo" src="assets/img/logo2.png" alt="Jurix & Sistem logo">
         <h1>JURIX & SISTEM S.A.S.</h1>
       </div>
       <div class="nav-links">
