--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TOV BUSINESS SAS</title>
+    <title>JURIX & SISTEM S.A.S.</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -63,10 +63,9 @@
 
     <!-- Header -->
     <header class="header">
-        <h1>TOV BUSINESS S.A.S.</h1>
-        <p class="fs-5">SUPER ADMINISTRADOR</p>
+        <h1>JURIX & SISTEM S.A.S.</h1>
+        <p class="fs-5">CONSULTORIAS</p>
         <form runat="server">
-            <asp:Button ID="btnCerrarSesion" runat="server" CssClass="btn btn-danger" Text="Cerrar Sesión" OnClick="btnCerrarSesion_Click" />
         </form>
 
     </header>
