--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
         .header {
             background-color: #000;
-            color:  #fdd017;
+            color: #efb810;
             text-align: center;
             padding: 20px 0;
         }
