--- a/index.html
+++ b/index.html
@@ -184,5 +184,41 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <section class="hero">
+    <div class="container">
+      <div class="grid">
+        <div class="col-left">
+          <h2>Soluciones Legales y Tecnológicas para un mundo que no se detiene</h2>
+          <p>JURIX & SISTEM S.A.S. integra experiencia jurídica y técnica para proteger la operación de su empresa, garantizando cumplimiento normativo, continuidad operativa y seguridad informática.</p>
+          <a class="cta" href="contacto.html">Solicitar consulta</a>
+          <div class="cards" style="margin-top:20px">
+            <div class="card"><h3>Protección de datos</h3><p>Programas de Habeas Data y adaptación normativa.</p></div>
+            <div class="card"><h3>Administración de redes</h3><p>Diseño y monitoreo de redes empresariales.</p></div>
+            <div class="card"><h3>Soporte y mantenimiento</h3><p>Paquetes mensuales para continuidad operativa.</p></div>
+          </div>
+        </div>
+        <div style="flex:0.9">
+          <img src="assets/img/hero-illustration.png" alt="Imagen servicios" style="width:100%;border-radius:10px;box-shadow:0 8px 24px rgba(13,71,161,0.08)" />
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="container">
+    <div class="section-title"><h3>¿Por qué elegirnos?</h3></div>
+    <p>Combinamos derecho y tecnología para ofrecer soluciones prácticas, seguras y alineadas a la operación de su negocio.</p>
+  </section>
+
+  <footer class="footer">
+    <div class="container">
+      <p>Jurix & Sistem S.A.S. — Barranquilla, Colombia | jurixsistemsas@outlook.com | WhatsApp: +57 3012564208</p>
+      <p>© <span id="year"></span> Jurix & Sistem S.A.S.</p>
+    </div>
+  </footer>
+
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+
+    
 </body>
 </html>
