--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
             <div class="col-md-9">
                 <!-- Welcome Section -->
                 <section class="welcome-container mb-4">
-                    <h2>BIENVENIDO ESTIMADO COLABORADOR A TU PLATAFORMA</h2>
-                    <p class="lead"><asp:Label ID="lblMensaje" runat="server" Text="Label" ForeColor="White"></asp:Label></p>
+                <h2>Soluciones Legales y Tecnológicas para un mundo que no se detiene</h2>
+                <p>JURIX & SISTEM S.A.S. integra experiencia jurídica y técnica para proteger la operación de su empresa, garantizando cumplimiento normativo, continuidad operativa y seguridad informática.</p>                    <p class="lead"><asp:Label ID="lblMensaje" runat="server" Text="Label" ForeColor="White"></asp:Label></p>
                 </section>
 
                 <!-- Image Section -->
