--- a/index.html
+++ b/index.html
@@ -77,32 +77,18 @@
             <nav class="col-md-3 mb-3">
                 <div class="menu-container p-3">
                     <ul class="nav flex-column">
-                        <!-- Administración -->
+                        <!-- Inicio -->
                         <li class="nav-item">
                             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="collapse" data-bs-target="#adminSubmenu" aria-expanded="false">
-                                Administración
-                            </a>
-                            <ul class="collapse list-unstyled" id="adminSubmenu">
-                                <li><a class="nav-link" href="#" onclick="window.open('frmUsuarios.aspx')" >- Usuarios</a></li>
-                                <li><a class="nav-link" href="#" onclick="window.open('frmTipoPerfil.aspx')" >- Tipo Perfil</a></li>
-                                <li><a class="nav-link" href="#" onclick="window.open('frmCiudad.aspx')" >- Ciudad</a></li>
-                                <li><a class="nav-link" href="#" onclick="window.open('frmPais.aspx')" >- Pais</a></li>
-                                <li><a class="nav-link" href="#" onclick="window.open('frmTipoPago.aspx')" >- Tipo Pago</a></li>
-                                <li><a class="nav-link" href="#" onclick="window.open('frmEstadoPedido.aspx')" >- Estado Pedido</a></li>                               
-                            </ul>
+                                Inicio
+                            </a>                          
                         </li>
 
-                        <!-- Gestión Humana -->
+                        <!-- Nosotros -->
                         <li class="nav-item">
                             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="collapse" data-bs-target="#hrSubmenu" aria-expanded="false">
-                                Gestión Humana
-                            </a>
-                            <ul class="collapse list-unstyled" id="hrSubmenu">
-                                <li><a class="nav-link" href="#" onclick="window.open('frmEmpleados.aspx')" >- Empleados</a></li>
-                                <li><a class="nav-link" href="#" onclick="window.open('frmCargo.aspx')" >- Cargo</a></li>
-                                <li><a class="nav-link" href="#" onclick="window.open('frmNomina.aspx')" >- Pago Nomina</a></li>
-                                <li><a class="nav-link" href="#" onclick="window.open('frmReportesNomina.aspx')" >- Reportes Nomina</a></li>                                
-                            </ul>
+                                Nosotros
+                            </a>                            
                         </li>
 
                         <!-- Almacén -->
