--- a/index.html
+++ b/index.html
@@ -91,16 +91,14 @@
                             </a>                            
                         </li>
 
-                        <!-- Almacén -->
+                        <!-- Servicios -->
                         <li class="nav-item">
                             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="collapse" data-bs-target="#warehouseSubmenu" aria-expanded="false">
-                                Almacén
+                                Servicios
                             </a>
                             <ul class="collapse list-unstyled" id="warehouseSubmenu">
-                                <li><a class="nav-link" href="#" onclick="window.open('frmCategorias.aspx')" >- Categorias</a></li>
-                                <li><a class="nav-link" href="#" onclick="window.open('frmProductos.aspx')" >- Productos</a></li>
-                                <li><a class="nav-link" href="#" onclick="window.open('frmProveedores.aspx')" >- Proveedores</a></li>
-                                <li><a class="nav-link" href="#" onclick="window.open('frmReporteProductos.aspx')" >- Consulta Existencia Productos</a></li>
+                                <li><a class="nav-link" href="#" onclick="window.open('frmCategorias.aspx')" >- Juridicos</a></li>
+                                <li><a class="nav-link" href="#" onclick="window.open('frmProductos.aspx')" >- Tecnologicos</a></li>                          
                             </ul>
                         </li>
                        
