--- a/index.html
+++ b/index.html
@@ -79,16 +79,14 @@
                     <ul class="nav flex-column">
                         <!-- Inicio -->
                         <li class="nav-item">
-                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="collapse" data-bs-target="#adminSubmenu" aria-expanded="false">
-                                Inicio
-                            </a>                          
+                                <li><a class="nav-link" href="#" onclick="window.open('frmCategorias.aspx')" >- Inicio</a></li>
+                         
                         </li>
 
                         <!-- Nosotros -->
                         <li class="nav-item">
-                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="collapse" data-bs-target="#hrSubmenu" aria-expanded="false">
-                                Nosotros
-                            </a>                            
+                                <li><a class="nav-link" href="#" onclick="window.open('frmCategorias.aspx')" >- Inicio</a></li>
+                            
                         </li>
 
                         <!-- Servicios -->
