--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                     <ul class="nav flex-column">
                         <!-- Inicio -->
                         <li class="nav-item">
-                                <li><a class="nav-link" href="#" onclick="window.open('frmCategorias.aspx')" >- Inicio</a></li>
+                                <li><a class="nav-link" href="#" onclick="window.open('index.html')" > Inicio</a></li>
                          
                         </li>
 
                         <!-- Nosotros -->
                         <li class="nav-item">
-                                <li><a class="nav-link" href="#" onclick="window.open('frmCategorias.aspx')" >- Inicio</a></li>
+                                <li><a class="nav-link" href="#" onclick="window.open('nosotros.html')" > Nosotros</a></li>
                             
                         </li>
 
