--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
       <div class="nav-links">
         <a href="index.html">Inicio</a>
         <a href="nosotros.html">Nosotros</a>
+        
+                      <!-- Servicios -->
+                        <li class="nav-item">
+                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="collapse" data-bs-target="#warehouseSubmenu" aria-expanded="false">
+                                Servicios
+                            </a>
+                            <ul class="collapse list-unstyled" id="warehouseSubmenu">
+                                <li><a class="nav-link" href="#" onclick="window.open('frmCategorias.aspx')" >- Juridicos</a></li>
+                                <li><a class="nav-link" href="#" onclick="window.open('frmProductos.aspx')" >- Tecnologicos</a></li>                          
+                            </ul>
+                        </li>
 
+        
         <div class="dropdown">
           <span class="drop-btn">Servicios ▾</span>
           <div class="dropdown-content">
