--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
       <div class="nav-links">
         <a href="index.html">Inicio</a>
         <a href="nosotros.html">Nosotros</a>
+
+ <!-- Main Content -->
+    <main class="container my-4">
+        <div class="row">
+            <!-- Menu -->
+            <nav class="col-md-3 mb-3">
+                <div class="menu-container p-3">
+                    <ul class="nav flex-column">
+
         
                       <!-- Servicios -->
                         <li class="nav-item">
