--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     .brand-title p {
       margin:0;
       font-size:14px;
-      color:#ffffff;
+      color:#CDAA6D;
       opacity:0.95;
       margin-top:4px;
       letter-spacing:1px;
