--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       height:auto;
       display:block;
     }
-    .brand-title { line-height:1; }
+    .brand-title { line-height:1; } /*Titulo principal Jurix & Sistem SAS */
     .brand-title h1 {
       margin:0;
       font-size:30px; /* tamaño A */
@@ -46,10 +46,10 @@
       font-weight:700;
       letter-spacing:0.6px;
     }
-    .brand-title p {
+    .brand-title p { /* Subtitulo principal Consultorias */
       margin:0;
       font-size:14px;
-      color:#CDAA6D;
+      color:#ffffff;
       opacity:0.95;
       margin-top:4px;
       letter-spacing:1px;
