--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       height:auto;
       display:block;
     }
-    .brand-title { line-height:1; } /*Titulo principal Jurix & Sistem SAS */
+     /* Titulo principal Jurix & Sistem SAS */
+    .brand-title { line-height:1; }
     .brand-title h1 {
       margin:0;
       font-size:30px; /* tamaño A */
@@ -46,7 +47,9 @@
       font-weight:700;
       letter-spacing:0.6px;
     }
-    .brand-title p { /* Subtitulo principal Consultorias */
+    
+    /* Subtitulo principal Consultorias */
+    .brand-title p { 
       margin:0;
       font-size:14px;
       color:#ffffff;
