--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
             </div>
             
             <div class="service-card">
-              <h3>Próximamente</h3>
-              <p>Espacio disponible para nuevos servicios o casos de éxito.</p>
+              <h3>Desarrollo web y Software</h3>
+              <p>Desarrollo de páginas corporativas y soluciones a la medida.</p>
             </div>
 
             
