--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <!-- Left column -->
         <div class="col-lg-6 left">
           <h2>JURIX & SISTEM S.A.S.</h2>
-          <p class="lead">Soluciones legales y tecnológicas para empresas que avanzan.</p>
+          <p class="lead">Soluciones legales y tecnológicas para un mundo que no se detiene.</p>
 
           <a href="contacto.html" class="btn btn-primary-cta d-inline-block">Solicitar consulta</a>
 
