--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
   <!-- FOOTER -->
   <footer class="site-footer">
     <div class="container text-center">
-      <p style="margin:0;">Jurix & Sistem S.A.S. — Barranquilla, Colombia | jurixsistemsas@outlook.com | WhatsApp: +57 3012564208</p>
+      <p style="margin:0;">Jurix & Sistem S.A.S. — Barranquilla, Colombia | jurixsistemsas@outlook.com - jurixsistemsas.contacto@gmail.com | WhatsApp: +57 3012564208</p>
       <p style="margin:6px 0 0">© <span id="year"></span> JURIX & SISTEM S.A.S.</p>
     </div>
   </footer>
