--- a/contacto.html
+++ b/contacto.html
@@ -39,7 +39,7 @@
       <aside class="form-card">
         <h4>Información</h4>
         <p><strong>Jurix & Sistem S.A.S.</strong></p>
-        <p>Calle 120 No. 31-86, Oficina 302 — Barranquilla, Colombia</p>
+        <p>Calle 120 No. 31-86 — Barranquilla, Colombia</p>
         <p>jurixsistemsas@outlook.com</p>
         <p>jurixsistemsas.contacto@gmail.com</p>
         <p>WhatsApp: <a href="https://wa.me/573012564208" target="_blank" rel="noopener" style="color:var(--azul)">+57 3012564208</a></p>
