--- a/equipo.html
+++ b/equipo.html
@@ -21,8 +21,8 @@
   </header>
 
   <main class="container">
-    <h2 style="color:var(--azul)">Clientes y Alianzas</h2>
-    <p>Aquí puedes listar clientes, alianzas o casos de éxito. Al inicio puedes poner “Clientes: En proceso de actualización” si prefieres no publicar nombres.</p>
+    <h2 style="color:var(--azul)">Nuestro Equipo</h2>
+    <p>Contamos con profesionales.</p>
   </main>
 
   <footer class="footer">
