--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           </div>
 
           <a class="nav-link" href="clientes.html">Clientes</a>
-          <a class="nav-link" href="clientes.html">Nuestro Equipo</a>
+          <a class="nav-link" href="equipo.html">Nuestro Equipo</a>
           <a class="nav-link" href="contacto.html">Contacto</a>
         </nav>
       </div>
