--- a/clientes.html
+++ b/clientes.html
@@ -3,34 +3,230 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Clientes — Jurix & Sistem</title>
+  <title>JURIX & SISTEM S.A.S. — Clientes</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Main CSS (usa el mismo style.css que aplicaste en index) -->
   <link rel="stylesheet" href="assets/css/style.css" />
+
+  <style>
+    /* Pequeños ajustes específicos para la página de clientes */
+    .page-hero {
+      padding: 36px 0;
+      background: linear-gradient(180deg, #0E2A48 0%, #061628 30%);
+      color: #fff;
+    }
+    .clients-grid {
+      display:grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px,1fr));
+      gap:18px;
+      align-items:center;
+      margin-top:20px;
+    }
+    .client-card {
+      background:#fff;
+      border-radius:10px;
+      padding:18px;
+      box-shadow: 0 8px 20px rgba(2,10,24,0.06);
+      text-align:center;
+      min-height:120px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+    }
+    .client-card img { max-width:120px; max-height:80px; object-fit:contain; }
+    .case-study {
+      background: linear-gradient(180deg, #ffffff 0%, #f4f8fb 100%);
+      border-radius:12px;
+      padding:20px;
+      box-shadow:0 8px 24px rgba(2,10,24,0.04);
+    }
+    .cta-bar {
+      background:#0D3B66;
+      color:#fff;
+      padding:22px;
+      border-radius:12px;
+      margin-top:28px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:12px;
+      flex-wrap:wrap;
+    }
+    .cta-bar .cta-btn {
+      background:#CDAA6D;
+      color:#021226;
+      padding:10px 18px;
+      border-radius:8px;
+      font-weight:700;
+      text-decoration:none;
+    }
+
+    @media (max-width:768px){
+      .cta-bar { text-align:center; flex-direction:column; }
+      .cta-bar .cta-btn { margin-top:12px; }
+    }
+  </style>
 </head>
 <body>
-  <header class="header">
-    <nav class="navbar">
-      <div class="brand"><img src="assets/img/logo.png" alt="Logo" /><h1>JURIX & SISTEM S.A.S.</h1></div>
-      <div class="nav-links">
-        <a href="index.html">Inicio</a>
-        <a href="nosotros.html">Nosotros</a>
-        <div class="dropdown"><span class="drop-btn">Servicios ▾</span><div class="dropdown-content"><a href="juridicos.html">Jurídicos</a><a href="tecnologicos.html">Tecnológicos</a></div></div>
-        <a href="clientes.html">Clientes</a>
-        <a href="contacto.html">Contacto</a>
+
+  <!-- HEADER (copiado del index para consistencia) -->
+  <header class="header-top">
+    <div class="container">
+      <div class="brand-row">
+        <div class="logo-circle">
+          <img src="assets/img/logo.png" alt="Jurix & Sistem logo">
+        </div>
+
+        <div class="brand-title">
+          <h1>JURIX & SISTEM S.A.S.</h1>
+          <p>CONSULTORÍAS</p>
+        </div>
       </div>
-    </nav>
+    </div>
+
+    <!-- MENU -->
+    <div class="menu-row">
+      <div class="container">
+        <nav class="d-flex justify-content-center align-items-center py-2">
+          <a class="nav-link" href="index.html">Inicio</a>
+          <a class="nav-link" href="nosotros.html">Nosotros</a>
+
+          <div class="nav-item dropdown mx-2">
+            <a class="nav-link dropdown-toggle" href="#" id="serviciosDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Servicios</a>
+            <ul class="dropdown-menu" aria-labelledby="serviciosDropdown">
+              <li><a class="dropdown-item" href="juridicos.html">Jurídicos</a></li>
+              <li><a class="dropdown-item" href="tecnologicos.html">Tecnológicos</a></li>
+            </ul>
+          </div>
+
+          <a class="nav-link active" href="clientes.html">Clientes</a>
+          <a class="nav-link" href="contacto.html">Contacto</a>
+        </nav>
+      </div>
+    </div>
   </header>
 
-  <main class="container">
-    <h2 style="color:var(--azul)">Clientes y Alianzas</h2>
-    <p>Aquí puedes listar clientes, alianzas o casos de éxito. Al inicio puedes poner “Clientes: En proceso de actualización” si prefieres no publicar nombres.</p>
-  </main>
-
-  <footer class="footer">
+  <!-- HERO / BANNER -->
+  <section class="page-hero">
     <div class="container">
-      <p>Jurix & Sistem S.A.S. — Barranquilla, Colombia</p>
-      <p>© <span id="y5"></span> Jurix & Sistem S.A.S.</p>
+      <div class="row align-items-center">
+        <div class="col-lg-8">
+          <h2 style="color:#F5F5F5; font-size:34px; margin-bottom:8px;">Nuestros Clientes y Casos de Éxito</h2>
+          <p style="color:#dbeaf8; font-size:15px; margin-bottom:18px;">
+            Con orgullo trabajamos con organizaciones del sector público y privado en la región Caribe y todo Colombia, brindando soluciones integradas en derecho y tecnología.
+          </p>
+          <a href="contacto.html" class="btn btn-primary-cta">Solicitar consulta</a>
+        </div>
+
+        <div class="col-lg-4 text-lg-end mt-4 mt-lg-0">
+          <!-- Pequeña tarjeta resumen -->
+          <div class="case-study">
+            <strong style="color:#0D3B66; font-size:16px;">Proyectos recientes</strong>
+            <p style="margin:6px 0 0; color:#375b82;">Implementación de políticas de protección de datos y monitoreo de redes en universidades y empresas.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CLIENTES: logos -->
+  <section class="container my-5">
+    <div class="row">
+      <div class="col-12 text-center mb-3">
+        <h3 style="color:#0D3B66;">Algunas organizaciones que nos han confiado sus proyectos</h3>
+        <p style="color:#374d63;">(Logos de ejemplo — reemplaza por los logos reales de tus clientes)</p>
+      </div>
+
+      <div class="col-12">
+        <div class="clients-grid">
+          <!-- Subir logos a assets/img/clients/cliente1.png etc -->
+          <div class="client-card"><img src="assets/img/clients/cliente1.png" alt="Cliente 1"></div>
+          <div class="client-card"><img src="assets/img/clients/cliente2.png" alt="Cliente 2"></div>
+          <div class="client-card"><img src="assets/img/clients/cliente3.png" alt="Cliente 3"></div>
+          <div class="client-card"><img src="assets/img/clients/cliente4.png" alt="Cliente 4"></div>
+          <div class="client-card"><img src="assets/img/clients/cliente5.png" alt="Cliente 5"></div>
+          <div class="client-card"><img src="assets/img/clients/cliente6.png" alt="Cliente 6"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CASOS DE ÉXITO / TESTIMONIOS -->
+  <section class="container my-4">
+    <div class="row g-4">
+      <div class="col-lg-6">
+        <div class="case-study">
+          <h4 style="color:#0D3B66;">Caso: Universidad - Seguridad de la Información</h4>
+          <p>Implementamos un plan integral de protección de datos y monitoreo de la infraestructura, reduciendo incidentes y mejorando cumplimiento normativo.</p>
+          <p style="font-weight:600; margin-top:8px;">Resultado: mejora operativa y reducción de riesgo legal.</p>
+        </div>
+      </div>
+
+      <div class="col-lg-6">
+        <div class="case-study">
+          <h4 style="color:#0D3B66;">Caso: Empresa comercial - Soporte y continuidad</h4>
+          <p>Contrato de mantenimiento preventivo y correctivo para 50 puestos de trabajo, administración de redes y backup automatizado.</p>
+          <p style="font-weight:600; margin-top:8px;">Resultado: disponibilidad 24/7 y reducción de tiempos de inactividad.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Testimonios (opcional) -->
+  <section class="container my-4">
+    <div class="row">
+      <div class="col-12 text-center mb-3">
+        <h3 style="color:#0D3B66;">Testimonios</h3>
+      </div>
+
+      <div class="col-md-4">
+        <div class="case-study">
+          <p>"Jurix & Sistem nos ayudó a adaptar nuestras políticas de datos con rapidez y claridad."</p>
+          <p style="font-weight:700; margin-bottom:0;">— Gerente TI, Cliente A</p>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="case-study">
+          <p>"La respuesta del equipo ante un incidente fue excelente; mitigaron riesgos y nos guiaron legalmente."</p>
+          <p style="font-weight:700; margin-bottom:0;">— Directora de Operaciones, Cliente B</p>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="case-study">
+          <p>"Profesionales con experiencia en derecho y tecnología: soluciones prácticas y ejecutables."</p>
+          <p style="font-weight:700; margin-bottom:0;">— CEO, Cliente C</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA final -->
+  <section class="container my-5">
+    <div class="cta-bar">
+      <div>
+        <strong style="font-size:18px">¿Quiere que colaboremos con su empresa?</strong>
+        <div style="color:#d3e7fb; margin-top:6px;">Solicite una reunión técnica o una propuesta a la medida.</div>
+      </div>
+      <div>
+        <a href="contacto.html" class="cta-btn">Solicitar reunión</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="container text-center">
+      <p style="margin:0;">Jurix & Sistem S.A.S. — Barranquilla, Colombia | jurixsistemsas@outlook.com | WhatsApp: +57 3012564208</p>
+      <p style="margin:6px 0 0">© <span id="year"></span> JURIX & SISTEM S.A.S.</p>
     </div>
   </footer>
-  <script>document.getElementById('y5').textContent = new Date().getFullYear();</script>
+
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
