--- a/clientes.html
+++ b/clientes.html
@@ -72,7 +72,7 @@
 </head>
 <body>
 
-  <!-- HEADER (copiado del index para consistencia) -->
+   <!-- HEADER TOP (logo + title) -->
   <header class="header-top">
     <div class="container">
       <div class="brand-row">
