--- a/clientes.html
+++ b/clientes.html
@@ -3,70 +3,148 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>JURIX & SISTEM S.A.S. — Clientes</title>
+  <title>JURIX & SISTEM S.A.S. — Inicio</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Main CSS (usa el mismo style.css que aplicaste en index) -->
+  <!-- Main CSS (mantén o reemplaza assets/css/style.css con el que te entregué) -->
   <link rel="stylesheet" href="assets/css/style.css" />
 
+  <!-- Small header-specific styles to ensure the circle logo, hero full-screen and menu layout -->
   <style>
-    /* Pequeños ajustes específicos para la página de clientes */
-    .page-hero {
-      padding: 36px 0;
-      background: linear-gradient(180deg, #0E2A48 0%, #061628 30%);
+    /* Header layout adjustments */
+    .header-top {
+      background: #000;
       color: #fff;
+      padding: 18px 0 10px;
     }
-    .clients-grid {
-      display:grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px,1fr));
-      gap:18px;
-      align-items:center;
-      margin-top:20px;
-    }
-    .client-card {
-      background:#fff;
-      border-radius:10px;
-      padding:18px;
-      box-shadow: 0 8px 20px rgba(2,10,24,0.06);
-      text-align:center;
-      min-height:120px;
+    .brand-row { display:flex; align-items:center; gap:18px; }
+    .logo-circle {
+      width: 96px;
+      height: 96px;
+      border-radius: 50%;
       display:flex;
       align-items:center;
       justify-content:center;
+      background: transparent;
+      border: 4px solid rgba(205,170,109,0.95); /* dorado medio */
+      box-shadow: 0 6px 18px rgba(0,0,0,0.35);
+      overflow:hidden;
+      flex-shrink:0;
     }
-    .client-card img { max-width:120px; max-height:80px; object-fit:contain; }
-    .case-study {
-      background: linear-gradient(180deg, #ffffff 0%, #f4f8fb 100%);
-      border-radius:12px;
-      padding:20px;
-      box-shadow:0 8px 24px rgba(2,10,24,0.04);
+    .logo-circle img {
+      width:78%;
+      height:auto;
+      display:block;
     }
-    .cta-bar {
-      background:#0D3B66;
-      color:#fff;
-      padding:22px;
-      border-radius:12px;
-      margin-top:28px;
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:12px;
-      flex-wrap:wrap;
-    }
-    .cta-bar .cta-btn {
-      background:#CDAA6D;
-      color:#021226;
-      padding:10px 18px;
-      border-radius:8px;
+     /* Titulo principal Jurix & Sistem SAS */
+    .brand-title { line-height:1; }
+    .brand-title h1 {
+      margin:0;
+      font-size:30px; /* tamaño A */
+      color: #CDAA6D; /* dorado */
       font-weight:700;
-      text-decoration:none;
+      letter-spacing:0.6px;
+    }
+    
+    /* Subtitulo principal Consultorias */
+    .brand-title p { 
+      margin:0;
+      font-size:14px;
+      color:#ffffff;
+      opacity:0.95;
+      margin-top:4px;
+      letter-spacing:1px;
     }
 
-    @media (max-width:768px){
-      .cta-bar { text-align:center; flex-direction:column; }
-      .cta-bar .cta-btn { margin-top:12px; }
+    /* Menu row (white bg with blue bottom border) */
+    .menu-row {
+      background:#fff;
+      border-bottom:3px solid #2E86C1; /* azul TOV */
+    }
+    .menu-row .nav-link {
+      color:#000;
+      font-weight:600;
+      padding:10px 12px;
+    }
+    .menu-row .nav-link:hover {
+      color:#2E86C1;
+      background:transparent;
+    }
+
+    /* Hero full-screen */
+    .hero {
+      min-height:100vh;
+      display:flex;
+      align-items:center;
+      padding: 40px 0;
+      background: linear-gradient(180deg, #0E2A48 0%, #061628 70%); /* degradado azul petróleo -> azul oscuro */
+      color:#fff;
+    }
+    .hero .left {
+      max-width: 630px;
+    }
+    .hero h2 {
+      font-size:40px;
+      color:#F5F5F5;
+      margin-bottom:12px;
+      line-height:1.05;
+    }
+    .hero p.lead {
+      color: #e6eef6;
+      font-size:16px;
+      margin-bottom:20px;
+    }
+    .btn-primary-cta {
+      background:#CDAA6D;
+      border: 2px solid rgba(205,170,109,0.95);
+      color:#021226;
+      font-weight:700;
+      padding:12px 20px;
+      border-radius:8px;
+    }
+    .btn-primary-cta:hover { background:#b79856; color:#021226; }
+
+    .hero .right img{
+      width:100%;
+      height:auto;
+      border-radius:12px;
+      box-shadow: 0 12px 36px rgba(2,10,24,0.6);
+    }
+
+    /* Cards */
+    .cards { margin-top:26px; display:grid; grid-template-columns:repeat(auto-fit, minmax(210px,1fr)); gap:18px;}
+    .service-card {
+      background:rgba(255,255,255,0.04);
+      border:1px solid rgba(255,255,255,0.06);
+      padding:18px;
+      border-radius:12px;
+      color:#eef6ff;
+      min-height:110px;
+    }
+    .service-card h3 { color:#CDAA6D; margin-bottom:8px; font-size:18px; }
+    .service-card p { color:#dbeaf8; font-size:14px; }
+
+    /* Why choose us */
+    .why { padding:48px 0; background:#fff; color:#222; border-top:1px solid #eef2f6; border-bottom:1px solid #eef2f6; }
+    .why h3 { color: #0D3B66; margin-bottom:14px; }
+
+    /* Footer */
+    .site-footer {
+      background:#000;
+      color:#CDAA6D;
+      padding:22px 0;
+      margin-top:30px;
+    }
+
+    /* Responsive tweaks */
+    @media (max-width:992px) {
+      .brand-row { gap:12px; }
+      .logo-circle { width:76px; height:76px; border-width:3px; }
+      .brand-title h1 { font-size:22px; }
+      .hero h2 { font-size:28px; }
+      .hero { padding:30px 0; }
     }
   </style>
 </head>
