--- a/clientes.html
+++ b/clientes.html
@@ -215,7 +215,7 @@
     <div class="row">
       <div class="col-12 text-center mb-3">
         <h3 style="color:#0D3B66;">Algunas organizaciones que nos han confiado sus proyectos</h3>
-        /* <p style="color:#374d63;">(Logos de ejemplo — reemplaza por los logos reales de tus clientes)</p> */
+        <p style="color:#374d63;"></p>
       </div>
 
       <div class="col-12">
