--- a/clientes.html
+++ b/clientes.html
@@ -187,8 +187,14 @@
     </div>
   </header>
 
-  <!-- HERO / BANNER -->
-  <section class="page-hero">
+ <!-- HERO / BANNER -->
+  <section class="page-hero" style="
+    min-height:100vh;
+    display:flex;
+    align-items:center;
+    background: linear-gradient(180deg, rgba(8,18,32,0.75) 0%, rgba(2,6,12,0.85) 60%), url('assets/img/hero-clientes.png') center/cover no-repeat;
+    color:#fff;
+  ">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-8">
