--- a/clientes.html
+++ b/clientes.html
@@ -186,9 +186,15 @@
       </div>
     </div>
   </header>
-
-  <!-- HERO / BANNER -->
-  <section class="page-hero">
+  
+    <!-- HERO / BANNER -->
+  <section class="page-hero" style="
+    min-height:100vh;
+    display:flex;
+    align-items:center;
+    background: linear-gradient(180deg, rgba(8,18,32,0.75) 0%, rgba(2,6,12,0.85) 60%), url('assets/img/hero-clientes.png') center/cover no-repeat;
+    color:#fff;
+  ">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-8">
@@ -209,6 +215,7 @@
       </div>
     </div>
   </section>
+
 
   <!-- CLIENTES: logos -->
   <section class="container my-5">
