--- a/clientes.html
+++ b/clientes.html
@@ -188,35 +188,28 @@
   </header>
   
     <!-- HERO / BANNER -->
-  <section class="page-hero" style="
-    min-height:70vh;
-    display:flex;
-    align-items:center;
-    background: linear-gradient(180deg, rgba(8,18,32,0.75) 0%, rgba(2,6,12,0.85) 60%), url('assets/img/hero-clientes.png') center/cover no-repeat;
-    color:#fff;
-  ">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-8">
-          <h2 style="color:#F5F5F5; font-size:34px; margin-bottom:8px;">Nuestros Clientes y Casos de Éxito</h2>
-          <p style="color:#dbeaf8; font-size:15px; margin-bottom:18px;">
-            Con orgullo trabajamos con organizaciones del sector público y privado en la región Caribe y todo Colombia, brindando soluciones integradas en derecho y tecnología.
-          </p>
-          <a href="contacto.html" class="btn btn-primary-cta">Solicitar consulta</a>
-        </div>
-
-        <div class="col-lg-4 text-lg-end mt-4 mt-lg-0">
-          <!-- Pequeña tarjeta resumen -->
-          <div class="case-study">
-            <strong style="color:#0D3B66; font-size:16px;">Proyectos recientes</strong>
-            <p style="margin:6px 0 0; color:#375b82;">Implementación de políticas de protección de datos y monitoreo de redes en universidades y empresas.</p>
-          </div>
-        </div>
+ <section class="page-hero" style="
+  height:50vh;
+  background:
+    linear-gradient(180deg, rgba(8,18,32,0.75) 0%, rgba(2,6,12,0.85) 70%),
+    url('assets/img/hero-clientes.png') center/cover no-repeat;
+  display:flex;
+  align-items:center;
+  color:#fff;
+">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-8">
+        <h2 style="font-size:34px; margin-bottom:8px;">Nuestros Clientes y Casos de Éxito</h2>
+        <p style="color:#dbeaf8; font-size:15px; margin-bottom:18px;">
+          Con orgullo trabajamos con organizaciones del sector público y privado en la región Caribe y todo Colombia.
+        </p>
+        <a href="contacto.html" class="btn btn-primary-cta">Solicitar consulta</a>
       </div>
     </div>
-  </section>
-
-
+  </div>
+</section>
+  
   <!-- CLIENTES: logos -->
   <section class="container my-5">
     <div class="row">
