--- a/nosotros.html
+++ b/nosotros.html
@@ -232,6 +232,46 @@
   </div>
 </section>
 
+  <!-- VALORES CORPORATIVOS -->
+<section class="container py-5">
+  <div class="row">
+    <div class="col-12 mb-3">
+      <h3 style="color:#0D3B66;">Valores Corporativos</h3>
+      <p style="color:#374d63; font-size:15px;">
+        La cultura de Jurix & Sistem S.A.S. se construye sobre 3 fundamentos que direccionan nuestra ejecución, forma de trabajo y relación con clientes:
+      </p>
+    </div>
+
+    <div class="col-12">
+      <ul style="list-style:none; padding:0; margin:0;">
+        <li class="mb-3" style="display:flex; gap:12px;">
+          <span style="color:#CDAA6D; font-weight:700;">✔</span>
+          <div>
+            <strong style="color:#0D3B66;">Integridad</strong><br>
+            <span style="color:#374d63;">Actuamos con ética, transparencia y responsabilidad en cada decisión que tomamos.</span>
+          </div>
+        </li>
+
+        <li class="mb-3" style="display:flex; gap:12px;">
+          <span style="color:#CDAA6D; font-weight:700;">✔</span>
+          <div>
+            <strong style="color:#0D3B66;">Excelencia</strong><br>
+            <span style="color:#374d63;">Buscamos generar valor real, con análisis profundo, calidad técnica y rigor jurídico.</span>
+          </div>
+        </li>
+
+        <li style="display:flex; gap:12px;">
+          <span style="color:#CDAA6D; font-weight:700;">✔</span>
+          <div>
+            <strong style="color:#0D3B66;">Innovación</strong><br>
+            <span style="color:#374d63;">Incorporamos tecnología, estándares y enfoque basado en datos como ventaja competitiva.</span>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
+
 
   <!-- FOOTER -->
   <footer class="site-footer">
