--- a/clientes.html
+++ b/clientes.html
@@ -150,7 +150,7 @@
 </head>
 <body>
 
-  <!-- HEADER (copiado del index para consistencia) -->
+  <!-- HEADER TOP (logo + title) -->
   <header class="header-top">
     <div class="container">
       <div class="brand-row">
@@ -165,13 +165,14 @@
       </div>
     </div>
 
-    <!-- MENU -->
+    <!-- MENU (centered row) -->
     <div class="menu-row">
       <div class="container">
         <nav class="d-flex justify-content-center align-items-center py-2">
           <a class="nav-link" href="index.html">Inicio</a>
           <a class="nav-link" href="nosotros.html">Nosotros</a>
 
+          <!-- Servicios dropdown (simple custom dropdown) -->
           <div class="nav-item dropdown mx-2">
             <a class="nav-link dropdown-toggle" href="#" id="serviciosDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Servicios</a>
             <ul class="dropdown-menu" aria-labelledby="serviciosDropdown">
@@ -180,7 +181,8 @@
             </ul>
           </div>
 
-          <a class="nav-link active" href="clientes.html">Clientes</a>
+          <a class="nav-link" href="clientes.html">Clientes</a>
+          <a class="nav-link" href="equipo.html">Nuestro Equipo</a>
           <a class="nav-link" href="contacto.html">Contacto</a>
         </nav>
       </div>
