--- a/juridicos.html
+++ b/juridicos.html
@@ -273,6 +273,50 @@
     </div>
   </section>
 
+  <!-- SERVICIOS JURÍDICOS -->
+<section class="container my-5">
+  <div class="row">
+    <div class="col-12 mb-4">
+      <h3 style="color:#0D3B66;">Servicios Jurídicos que ofrecemos</h3>
+    </div>
+  </div>
+
+  <div class="cards">
+
+    <div class="service-card">
+      <h3>Asesoría Especializada en Derecho Laboral</h3>
+      <p>*</p>
+    </div>
+
+    <div class="service-card">
+      <h3>Asesoría Legal Empresarial</h3>
+      <p>*</p>
+    </div>
+
+    <div class="service-card">
+      <h3>Elaboración y revisión de contratos</h3>
+      <p>*</p>
+    </div>
+
+    <div class="service-card">
+      <h3>Capacitación en Normatividad Laboral</h3>
+      <p>*</p>
+    </div>
+
+    <div class="service-card">
+      <h3>Representación Jurídica</h3>
+      <p>*</p>
+    </div>
+
+    <div class="service-card">
+      <h3>Atención en Derecho de Familia, Civil y Comercial</h3>
+      <p>*</p>
+    </div>
+
+  </div>
+</section>
+
+
   <!-- FOOTER -->
   <footer class="site-footer">
     <div class="container text-center">
