--- a/juridicos.html
+++ b/juridicos.html
@@ -189,6 +189,28 @@
     </div>
   </header> 
 
+<!-- HERO / BANNER -->
+<section class="page-hero" style="
+  background-image:url('assets/img/hero-juridico.png');
+  background-size:cover;
+  background-position:center;
+  height:50vh;
+  display:flex;
+  align-items:center;
+  color:#fff;">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8">
+        <h2 style="color:#F5F5F5; font-size:34px; margin-bottom:8px;">Servicios Jurídicos</h2>
+        <p style="color:#dbeaf8; font-size:15px; margin-bottom:12px;">
+          Asesoría legal estratégica con enfoque empresarial y laboral.
+        </p>
+        <a href="contacto.html" class="btn btn-primary-cta">Solicitar consulta</a>
+      </div>
+    </div>
+  </div>
+</section>
+  
   <!-- SERVICIOS JURÍDICOS -->
 <section class="container my-5">
   <div class="row">
