--- a/juridicos.html
+++ b/juridicos.html
@@ -212,14 +212,17 @@
 </section>
   
   <!-- SERVICIOS JURÍDICOS -->
-<section class="container my-5">
-  <div class="row">
-    <div class="col-12 mb-4">
-      <h3 style="color:#0D3B66;">Servicios Jurídicos que ofrecemos</h3>
-    </div>
-  </div>
+<section class="hero">
+    <div class="container">
+      <div class="row align-items-center">
+        <!-- Left column -->
+        <div class="col-lg-6 left">
+          <h2>JURIX & SISTEM S.A.S.</h2>
+          <p class="lead">Soluciones legales y tecnológicas para un mundo que no se detiene.</p>
 
-  <div class="cards">
+          <a href="contacto.html" class="btn btn-primary-cta d-inline-block">Solicitar consulta</a>
+
+          <div class="cards">
 
     <div class="service-card">
       <h3>Asesoría Especializada en Derecho Laboral</h3>
