--- a/juridicos.html
+++ b/juridicos.html
@@ -211,14 +211,25 @@
   </div>
 </section>
   
-  <!-- SERVICIOS JURÍDICOS -->
-<section class="hero">
-    <div class="container">
-      <div class="row align-items-center">
-        <!-- Left column -->
-        <div class="col-lg-6 left">
-          
-          <div class="cards">
+ <!-- HERO SERVICIOS JURÍDICOS -->
+<section class="hero" style="background:url('assets/img/hero-juridico.png') center/cover no-repeat; min-height:50vh;">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-7">
+        <h2 style="color:#F5F5F5; font-size:38px; margin-bottom:8px;">
+          Servicios Jurídicos
+        </h2>
+        <p style="color:#dbeaf8; font-size:16px; margin-bottom:0;">
+          Experiencia real en defensa laboral, empresarial y normativa.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- SERVICIOS JURÍDICOS en tarjetas -->
+<section class="container" style="margin-top:30px; margin-bottom:40px;">
+  <div class="cards">
 
     <div class="service-card">
       <h3>Asesoría Especializada en Derecho Laboral</h3>
@@ -252,6 +263,7 @@
 
   </div>
 </section>
+
 
 
   <!-- FOOTER -->
