--- a/juridicos.html
+++ b/juridicos.html
@@ -189,17 +189,23 @@
     </div>
   </header> 
  
- <!-- HERO SERVICIOS JURÍDICOS -->
-<section class="hero" style="background:url('assets/img/hero-juridico.png') center/cover no-repeat; min-height:50vh;">
+<!-- HERO / BANNER -->
+<section class="page-hero" style="
+  background-image:url('assets/img/hero-juridico.png');
+  background-size:cover;
+  background-position:center;
+  height:50vh;
+  display:flex;
+  align-items:center;
+  color:#fff;">
   <div class="container">
-    <div class="row align-items-center">
-      <div class="col-lg-7">
-        <h2 style="color:#F5F5F5; font-size:38px; margin-bottom:8px;">
-          Servicios Jurídicos
-        </h2>
-        <p style="color:#dbeaf8; font-size:16px; margin-bottom:0;">
-          Experiencia real en defensa laboral, empresarial y normativa.
+    <div class="row">
+      <div class="col-lg-8">
+        <h2 style="color:#F5F5F5; font-size:34px; margin-bottom:8px;">Servicios Jurídicos</h2>
+        <p style="color:#dbeaf8; font-size:15px; margin-bottom:12px;">
+          Asesoría legal estratégica con enfoque empresarial y laboral.
         </p>
+        <a href="contacto.html" class="btn btn-primary-cta">Solicitar consulta</a>
       </div>
     </div>
   </div>
