--- a/juridicos.html
+++ b/juridicos.html
@@ -211,19 +211,15 @@
   </div>
 </section>
 
-<!-- SERVICIOS JURÍDICOS en tarjetas -->
-<section class="container" style="margin-top:30px; margin-bottom:40px;">
-   <section class="hero">
-    <div class="container">
-      <div class="row align-items-center">
-        <!-- Left column -->
-        <div class="col-lg-6 left">
-          <h2>JURIX & SISTEM S.A.S.</h2>
-          <p class="lead">Soluciones legales y tecnológicas para un mundo que no se detiene.</p>
+<!-- SERVICIOS JURÍDICOS -->
+<section class="container my-5">
+  <div class="row">
+    <div class="col-12 mb-4">
+      <h3 style="color:#0D3B66;">Servicios Jurídicos que ofrecemos</h3>
+    </div>
+  </div>
 
-          <a href="contacto.html" class="btn btn-primary-cta d-inline-block">Solicitar consulta</a>
-
-          <div class="cards">
+  <div class="cards">
 
     <div class="service-card">
       <h3>Asesoría Especializada en Derecho Laboral</h3>
@@ -257,8 +253,6 @@
 
   </div>
 </section>
-
-
 
   <!-- FOOTER -->
   <footer class="site-footer">
