--- a/juridicos.html
+++ b/juridicos.html
@@ -212,7 +212,8 @@
 </section>
 
 <!-- SERVICIOS JURÍDICOS -->
-<section class="container my-5">
+<section class="page-services-area">
+  <div class="container">
   <div class="row">
     <div class="col-12 mb-4">
       <h3 style="color:#0D3B66;">Servicios Jurídicos que ofrecemos</h3>
@@ -252,6 +253,7 @@
     </div>
 
   </div>
+</div>
 </section>
 
   <!-- FOOTER -->
