--- a/juridicos.html
+++ b/juridicos.html
@@ -189,7 +189,7 @@
     </div>
   </header> 
  
-<!-- HERO / BANNER -->
+<!-- HERO / BANNER JURIDICO -->
 <section class="page-hero" style="
   background-image:url('assets/img/hero-juridico.png');
   background-size:cover;
@@ -212,8 +212,7 @@
 </section>
 
 <!-- SERVICIOS JURÍDICOS -->
-<section class="page-services-area">
-  <div class="container">
+<section class="container my-5">
   <div class="row">
     <div class="col-12 mb-4">
       <h3 style="color:#0D3B66;">Servicios Jurídicos que ofrecemos</h3>
@@ -222,39 +221,51 @@
 
   <div class="cards">
 
-    <div class="service-card">
+    <div class="service-card" style="background:#D0F0F2;">
       <h3>Asesoría Especializada en Derecho Laboral</h3>
       <p>*</p>
+      <p>*</p>
+      <p>*</p>
     </div>
 
-    <div class="service-card">
+    <div class="service-card" style="background:#D0F0F2;">
       <h3>Asesoría Legal Empresarial</h3>
       <p>*</p>
+      <p>*</p>
+      <p>*</p>
     </div>
 
-    <div class="service-card">
+    <div class="service-card" style="background:#D0F0F2;">
       <h3>Elaboración y revisión de contratos</h3>
       <p>*</p>
+      <p>*</p>
+      <p>*</p>
     </div>
 
-    <div class="service-card">
+    <div class="service-card" style="background:#D0F0F2;">
       <h3>Capacitación en Normatividad Laboral</h3>
       <p>*</p>
-    </div>
-
-    <div class="service-card">
-      <h3>Representación Jurídica</h3>
+      <p>*</p>
       <p>*</p>
     </div>
 
-    <div class="service-card">
+    <div class="service-card" style="background:#D0F0F2;">
+      <h3>Representación Jurídica</h3>
+      <p>*</p>
+      <p>*</p>
+      <p>*</p>
+    </div>
+
+    <div class="service-card" style="background:#D0F0F2;">
       <h3>Atención en Derecho de Familia, Civil y Comercial</h3>
+      <p>*</p>
+      <p>*</p>
       <p>*</p>
     </div>
 
   </div>
-</div>
 </section>
+
 
   <!-- FOOTER -->
   <footer class="site-footer">
