--- a/tecnologicos.html
+++ b/tecnologicos.html
@@ -221,21 +221,21 @@
 
   <div class="cards">
 
-    <div class="service-card" style="background:#D0F0F2;">
+    <div class="service-card" style="background:#AAD4F1;">
       <h3>Desarrollo de Software a la medida</h3>
       <p>*</p>
       <p>*</p>
       <p>*</p>
     </div>
 
-    <div class="service-card" style="background:#D0F0F2;">
+    <div class="service-card" style="background:#AAD4F1;">
       <h3>Administración de redes</h3>
       <p>*</p>
       <p>*</p>
       <p>*</p>
     </div>
 
-    <div class="service-card" style="background:#D0F0F2;">
+    <div class="service-card" style="background:#AAD4F1;">
       <h3>Transformación Digital y Consultorías TI</h3>
       <p>*</p>
       <p>*</p>
@@ -249,14 +249,14 @@
       <p>*</p>
     </div>
 
-    <div class="service-card" style="background:#D0F0F2;">
+    <div class="service-card" style="background:#AAD4F1;">
       <h3>Comercio Electrónico y presencia Digital</h3>
       <p>*</p>
       <p>*</p>
       <p>*</p>
     </div>
 
-    <div class="service-card" style="background:#D0F0F2;">
+    <div class="service-card" style="background:#AAD4F1;">
       <h3>Mantenimiento Preventivo/Correctivo</h3>
       <p>*</p>
       <p>*</p>
