--- a/tecnologicos.html
+++ b/tecnologicos.html
@@ -242,7 +242,7 @@
       <p>*</p>
     </div>
 
-    <div class="service-card" style="background:#D0F0F2;">
+    <div class="service-card" style="background:#AAD4F1;">
       <h3>Seguridad Informática y Protección de Datos</h3>
       <p>*</p>
       <p>*</p>
