--- a/equipo.html
+++ b/equipo.html
@@ -199,7 +199,7 @@
   align-items:center;
   justify-content:center;
   color:#fff;">
-  <h2 style="font-size:28px; font-weight:700; margin:0;">Nuestro Equipo</h2>
+  <h2 style="font-size:28px; font-weight:700; margin:0;"></h2>
 </section>
 
 <section class="container my-5">
