--- a/equipo.html
+++ b/equipo.html
@@ -207,7 +207,7 @@
 
     <!-- Card 1 -->
     <div class="col">
-      <a href="perfil-miembro.html" style="text-decoration:none;">
+      <a href="perfil-luis-pimienta.html" style="text-decoration:none;">
         <div class="card h-100" style="background:#AAD4F1; border:none;">
           <img src="assets/img/equipo1.png" class="card-img-top" alt="Foto">
           <div class="card-body text-center">
