--- a/perfil-luis-pimienta.html
+++ b/perfil-luis-pimienta.html
@@ -1,1 +1,101 @@
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Perfil — Luis Carlos Pimienta Henao</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <style>
+    body{font-family: 'Arial', sans-serif;}
+
+    /* HERO Bajo */
+    .profile-hero{
+      height:25vh;
+      background-image:
+        linear-gradient(rgba(6,22,40,0.55),rgba(6,22,40,0.85)),
+        url('assets/img/foto-luis-pimienta.png');
+      background-size:cover;
+      background-position:center;
+      display:flex;
+      align-items:center;
+      color:#fff;
+    }
+
+    .section-title{
+      color:#0D3B66;
+      margin:28px 0 14px;
+      font-weight:700;
+      font-size:22px;
+    }
+
+    .data-box{
+      background:#f7faff;
+      border:1px solid #e6eef6;
+      border-radius:8px;
+      padding:18px;
+      margin-bottom:20px;
+    }
+  </style>
+</head>
+<body>
+
+<!-- HERO -->
+<section class="profile-hero">
+  <div class="container">
+    <h1 style="font-size:30px; font-weight:700; margin:0;">Luis Carlos Pimienta Henao</h1>
+    <p style="font-size:18px; margin:4px 0 0;">Abogado Laboralista & Ingeniero de Sistemas</p>
+  </div>
+</section>
+
+
+<div class="container my-5">
+
+  <!-- CONTACTO -->
+  <div class="section-title">Información de Contacto</div>
+  <div class="data-box">
+    <p style="margin:0;">📩 jurixsistemsas@outlook.com</p>
+    <p style="margin:0;">📩 jurixsistemsas.contacto@gmail.com</p>
+    <p style="margin:0;">📱 WhatsApp: +57 3012564208</p>
+  </div>
+
+  <!-- PERFIL PROFESIONAL -->
+  <div class="section-title">Perfil Profesional</div>
+  <div class="data-box">
+    <p>Aquí escribirás tu breve presentación profesional.</p>
+  </div>
+
+  <!-- EXPERIENCIA -->
+  <div class="section-title">Experiencia</div>
+  <div class="data-box">
+    <p>*</p>
+    <p>*</p>
+    <p>*</p>
+  </div>
+
+  <!-- FORMACIÓN -->
+  <div class="section-title">Formación Académica</div>
+  <div class="data-box">
+    <p>*</p>
+    <p>*</p>
+    <p>*</p>
+  </div>
+
+  <!-- ESPECIALIZACIONES -->
+  <div class="section-title">Especializaciones</div>
+  <div class="data-box">
+    <p>*</p>
+    <p>*</p>
+    <p>*</p>
+  </div>
+
+</div>
+
+<!-- JS bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
+</html>
 
