--- a/equipo.html
+++ b/equipo.html
@@ -209,7 +209,7 @@
     <div class="col">
       <a href="perfil-luis-pimienta.html" target="_blank">
         <div class="card h-100" style="background:#AAD4F1; border:none;">
-          <img src="assets/img/equipo1.png" class="card-img-top" alt="Foto">
+          <img src="assets/img/equipo-luis-pimienta.png" class="card-img-top" alt="Foto">
           <div class="card-body text-center">
             <h5 class="card-title" style="font-weight:700;">Luis Carlos Pimienta Henao</h5>
             <p style="margin:0;">Gerente</p>
