--- a/equipo.html
+++ b/equipo.html
@@ -226,7 +226,7 @@
           <img src="assets/img/equipo2.png" class="card-img-top" alt="Foto">
           <div class="card-body text-center">
             <h5 class="card-title" style="font-weight:700;">Paola Patricia Tovar Ariza</h5>
-            <p style="margin:0;">Sub Gerente</p>
+            <p style="margin:0;">Subgerente</p>
             <p style="margin:0;">Administradora de Empresas</p>
           </div>
         </div>
