--- a/perfil-luis-pimienta.html
+++ b/perfil-luis-pimienta.html
@@ -12,17 +12,13 @@
     body{font-family: 'Arial', sans-serif;}
 
     /* HERO Bajo */
-    .profile-hero{
-      height:25vh;
-      background-image:
-        linear-gradient(rgba(6,22,40,0.55),rgba(6,22,40,0.85)),
-        url('assets/img/equipo-luis-pimienta.png');
-      background-size:cover;
-      background-position:center;
-      display:flex;
-      align-items:center;
-      color:#fff;
-    }
+.profile-hero{
+  height:25vh;
+  background: linear-gradient(180deg, #0E2A48 0%, #061628 100%);
+  display:flex;
+  align-items:center;
+  color:#fff;
+}
 
     .section-title{
       color:#0D3B66;
