--- a/perfil-luis-pimienta.html
+++ b/perfil-luis-pimienta.html
@@ -40,10 +40,19 @@
 
 <!-- HERO -->
 <section class="profile-hero">
-  <div class="container">
+  <div class="container d-flex align-items-center">
+  
+  <div class="me-4">
+    <img src="assets/img/foto-luis-pimienta.png" alt="Luis Carlos Pimienta" style="width:120px; height:auto; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.45);">
+  </div>
+
+  <div>
     <h1 style="font-size:30px; font-weight:700; margin:0;">Luis Carlos Pimienta Henao</h1>
     <p style="font-size:18px; margin:4px 0 0;">Abogado Laboralista & Ingeniero de Sistemas</p>
   </div>
+
+</div>
+
 </section>
 
 
